# app/Http/Controllers/Api/CategoryController.php
@@ -2,20 +2,26 @@
 
 namespace App\Http\Controllers\Api;
 
-use App\Http\Controllers\Controller;
-use App\Http\Resources\CategoryResource;
+use App\Models\Product;
 use App\Models\Category;
 use Illuminate\Http\Request;
+use App\Http\Controllers\Controller;
+use App\Http\Resources\ProductResource;
+use App\Http\Resources\CategoryResource;
 
 class CategoryController extends Controller
 {
     protected $model;
+    protected $productModel;
     protected $modelResource;
+    protected $productResource;
 
     public function __construct(Category $model)
     {
         $this->model = $model;
+        $this->productModel = new Product();
         $this->modelResource = new CategoryResource(null);
+        $this->productResource = new ProductResource(null);
     }
 
     public function index(){
@@ -84,6 +90,38 @@ class CategoryController extends Controller
                 'data' => $this->modelResource->collection($models)
             ]);
         } else {
+            return response()->json([
+                'status' => false,
+                'message' => 'No data found.',
+                'data' => []
+            ]);
+        }
+    }
+
+    public function productsByCategory(Request $request, $categorySlug)
+    {
+        $perPage = $request->get('per_page', 10);
+        $sortField = $request->get('sort_field', 'created_at');
+        $sortDirection = $request->get('sort_direction', 'desc');
+        $search = $request->get('search');
+        $category = $this->model->where('slug', $categorySlug)->first();
+        if(!empty($category)){
+            $query = $category->products()
+                ->with('hasBrand', 'hasProductCondition')
+                ->where('status', 1);
+
+            if ($search) {
+                $query->where('title', 'like', "%$search%");
+            }
+
+            $products = $query->orderBy($sortField, $sortDirection)->paginate($perPage);  // Paginated result
+
+            return response()->json([
+                'status' => true,
+                'message' => 'Data found successfully.',
+                'data' => $this->productResource->collection($products)
+            ]);
+        }else{
             return response()->json([
                 'status' => false,
                 'message' => 'No data found.',
